Converts number_manipulation.py and testing files to object format.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,4 +4,4 @@
 # the repo. Unless a later match takes prescedence, 
 # @global-owner1 and @global-owner2 will be requested for 
 # review when someone opens a pull request 
-*     @vertikoff @jlongc12 @mackenna95
+*     @vertikoff @jlongc12 @mackenna95 @mlp6 @suyashkumar
